Major system updates: Replace capacity with dimensions, add work times, implement comprehensive reporting system, and enhance promotion integration
- Replace single capacity field with detailed physical dimensions (length, width, height) across all entities
- Replace string operating hours with structured LocalTime work times (startWorkTime, endWorkTime)
- Implement comprehensive enterprise reporting system with RESTful endpoints
- Add Redis caching for report performance optimization
- Enhance promotion integration with detailed pricing breakdowns and audit trails
- Add comprehensive API documentation in docs/ directory
- Update all DTOs, entities, repositories, services, and controllers
- Add database migrations for schema updates
- Update unit tests with comprehensive coverage
- Centralize configuration values in ApplicationConstants